[OPENJPA-2985] Apply review suggestions from PR 156
- EntityManagerImpl.parseFindOptions(): flatten the null check into an
  early return instead of wrapping the whole loop in "if (options != null)".
- TypedQueryReferenceImpl: use Map.of() for the empty-hints branch.

Deviation: the non-empty branch keeps unmodifiableMap(new LinkedHashMap<>(hints))
instead of Map.copyOf(hints), because Map.copyOf randomizes iteration order per
JVM run while createQuery(TypedQueryReference) replays the hints in that order
and OpenJPA has aliased hint keys (openjpa.FetchPlan.LockTimeout /
jakarta.persistence.lock.timeout, likewise for QueryTimeout) where the last write
wins, and because Map.copyOf rejects null keys and values that this public
constructor has always tolerated. TestGetNamedQueries now pins the order.